@@ -4,15 +4,15 @@ Hash: SHA256
 AUX haml-3.1.6-sass.patch 568 SHA256 bf1d8387aab6f23fe2a35ab1157c03bf316492090d365fa6f12b1f1a5266e71c SHA512 bf8878954ec4195eb90bd857b2aae47a97fcbad704e9361b894b612917da6407b3bbc460bdf4c8327f34be37b7c0e1a6599e545a408a6d57b3f744ca91d52ee2 WHIRLPOOL 26ad7a3016c497a469bba7d23e8784883bb6d270924fafe56067d66ed9ab210e6cb85d4752265153d8b474ca85f6fef3a934a39350becfc8a41a7fae953fe307
 DIST haml-3.1.8.gem 367616 SHA256 44f69d51810cfc5a0ffbb03fdc646afb2c2f4f841eacfab87caba02b59ae1617 SHA512 cb65e4b6b4eaf31b0d81376e819baf3a8e5216baa18fca744ac3297d207f26120c6571693459e06490dab587e7936624d14852504dd502de39dac3052181d4e7 WHIRLPOOL e6ea1e5f3074ec72d69ee99eeefacdea3dc36ff89ac6f29ae5e4fc0cc826ace375688a6126b1739e5bde0722fe0cf321f87561f68214ee72f5c60e1f8115c5a8
 DIST haml-4.0.3.gem 115712 SHA256 d94e937e5bc92da72e1d101e1ba983a5a84eb84b1981709b93fdfc349b833fd1 SHA512 1ecca4187a53071e17d4536ea7983d273a13630b66789640052da86376146a3f119175cc050c7fa7eeddc996f7bf0ad6728f215284fcb6918c82326c5a516f79 WHIRLPOOL 79aca5570b293617049fdc9981a7c85e7011b092485e2cd4688659e495c22718fbd2339e389efd08024b95f685436b80cbaf497d9f31388ebc59b275c0c3e57f
-EBUILD haml-3.1.8-r1.ebuild 1587 SHA256 0518efca9e25dba7266b61fe542cb1bca81bc7d9319dfa861facc245cf2e8b55 SHA512 2f253560a5906f1f91fba84860c482b8eae458e84e0ed520d9caef74b27afe640854476f5e79f735adac211a715c54f655c3d2ab9edc423e8f7a61cfcde27498 WHIRLPOOL f68ab2244e55f5087fbaa26063c2b0fd8abe4556926a6e04c5bcc09ec250144f267f29ca3fd4e77e1d4fce015b06d6d1b854104a0fc406dbdc080e1944bf2015
+EBUILD haml-3.1.8-r1.ebuild 1585 SHA256 78be178db7367660a735e9768ebd3ebfc43e756836407ffce16ee115b33914e7 SHA512 5bc6c06d50cd3e128f6d48d8cf79bdb3d180b774a804ff518e713baeb08605ab509116c6251d3f33be9d8c1346afdf06d2a67eceeb4a32468932c3738a9c1b67 WHIRLPOOL 50516855896b89ad7b44c7a6b091dc1f178989fb4e3001ec74f1474a9fe11a7c1f5b9630f7fbdb545294a0e364da300280ee60d14c4b21f1b96d4c820570fbce
 EBUILD haml-3.1.8-r2.ebuild 1612 SHA256 ef5a160f33e60d3e10c2382e52904e20aac5abbb300c0d859586579823e6978b SHA512 e8c396cad37a8d0468b8936d388905f9d5d051b689f63e044c05d2481784e02d65dea96ec02100ef55c7f1e30e779d9e6fc38fc565b2b0b67e6a301ee9cde965 WHIRLPOOL b84b48cfd036ba4042b6aca685dbfadf4559b153650effb004e0263a10509abb6a572488f3c7d587149e44651bf0c1cdce7dcd1a79ef974e0599ab585c190848
 EBUILD haml-4.0.3.ebuild 1056 SHA256 2778a83acef1f74c6dca3a515e2d15a0936145db5a249f7f6389ef73a9c7a8da SHA512 69af73e9ea007576f5999992afde605ae713edc7f77be0401fa4f354532989155c270cc392be7ca5258734af48275ccbe62daca1f159757cf2e312958c731d72 WHIRLPOOL 720fb1bd5abe7963ad36cf189c6c549c295c74862b28cdefde7118c8dd81b113f0b85bed2194b585b34e82dcf22dd237d4bd67f6b12355d3fc19aa8b3a125151
-MISC ChangeLog 12544 SHA256 1d93e2431211e9c0f6ffb510bb3839b677ed42368c67be1552792253c847fed3 SHA512 d208a986fa8afe86d8a18a88a85dfa6bb7b8cf61714b4edbfd85c0dae04663bb44a9b27de4e523e501a4606ae1c1bbafa138eb1509adcf152b2ffae654f85c45 WHIRLPOOL d1f5c57727035202eac5619d50c1a818674209a6a7de67e9debbcfa2d4515d3a2f6c709f4a29f3f0cad0c0188ab65748b30a67158391b42bda2693ba6b2302d2
+MISC ChangeLog 12639 SHA256 49c81a30209f95f296fa0450c5d188a4b43b9172cc5c026f257e9601c580d89f SHA512 4289b1cb8a8db49f30d53bb8a08d88aafaab481490686b013306eb118a541f8460f1cec02a4acceafa944b963f60bf5d08a61a8699d92fb0614af3f3a2f54774 WHIRLPOOL c96b41485337e1c17bb0780380bfee1d0236afe2ae452484fed78bd16b4485559d9f40ce1b6a6cba3d27486481d272f3d00d324e76c70770268fbff9a8a01288
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlJbjVoACgkQiIP6VqMIqNcjkAD/bmyf6yyYYyfRQmZZlxSTyV8R
-Mia8Nqgibr5RsNABQTUA+wVwXFIDh9zI4bjuE5VxKl37tftHQ/XyB3JHzwbUFT3g
-=L/mJ
+iEYEAREIAAYFAlMazrIACgkQCaWpQKGI+9RfIACfWwJNn1rAo0eU8TRQUx0mqR44
+kXEAn0NQ1uRrj5RmuCNmgJ2Uo9kJjCe7
+=dMEK
 -----END PGP SIGNATURE-----
